# pyreps

./: .coverage  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  benchmark_batched.py  benchmark_count.py  fix_renderer.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
api/adapters/: index.html
api/contracts/: index.html
api/renderers/: index.html
api/service/: index.html
benchmarks/: bench_performance.py  benchmark_batched.py
docs/: index.md  main.py  pt-br.md  xlsx.plan.md
docs/api/: adapters.md  contracts.md  renderers.md  service.md
docs/guide/: datasources.md  formats.md  performance.md  quickstart.md  types.md
docs/plans/: plan.md
docs/tasks/pdf_paragraph_heuristic/: task.md
docs/tasks/report_spec_immutability/: task.md
docs/tasks/sql_adapter_validation/: task.md
docs/tasks/xlsx_streaming_patch_robustness/: task.md
guide/datasources/: index.html
guide/formats/: index.html
guide/performance/: index.html
guide/quickstart/: index.html
guide/types/: index.html
pt-br/: index.html
scripts/: benchmark_memory.py
search/: search_index.json
src/py_reports/: __init__.py  adapters.py  coercion.py  contracts.py  exceptions.py  mapping.py  pdf_options.py  renderers.py  service.py  xlsx_options.py
src/py_reports/utils/: db.py  files.py  options.py  records.py  xml_zip.py
src/pyreps/: __init__.py  __main__.py  adapters.py  coercion.py  contracts.py  csv_options.py  exceptions.py  inference.py  mapping.py  pdf_options.py  renderers.py  service.py  xlsx_options.py
src/pyreps/utils/: __init__.py  db.py  files.py  options.py  records.py
tests/: test_adapters.py  test_cli.py  test_cloud_streaming.py  test_coercion.py  test_contracts.py  test_coverage_gap.py  test_inference.py  test_init.py  test_mapping.py  test_memory_stability.py  test_pdf_renderer.py  test_progress.py  test_records.py  test_remaining_features_contract.py  test_service.py  test_service_error_handling.py  test_xlsx_options.py  test_xlsx_renderer.py  utils_memory.py
