[project]
name = "py-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.11.7",
    "reportlab>=4.4.10",
    "rustpy-xlsxwriter>=0.0.12",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
