[project]
name = "pyreps"
version = "0.2.0"
description = "Python report generation — CSV, XLSX, and PDF with Rust performance."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jhonatan", email = "jhonatanrian@zohomail.com" }]
keywords = ["reports", "csv", "xlsx", "pdf", "export", "streaming", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fsspec>=2026.3.0",
    "ijson>=3.5.0",
    "orjson>=3.11.7",
    "reportlab>=4.4.10,<5",
    "rustpy-xlsxwriter>=0.4.3",
]

[project.optional-dependencies]
aws = ["s3fs>=2024.2.0"]
gcp = ["gcsfs>=2024.2.0"]
azure = ["adlfs>=2024.2.0"]
oracle = ["ocifs>=1.3.0"]
all = ["s3fs", "gcsfs", "adlfs", "ocifs"]

[project.urls]
Homepage = "https://github.com/JhonatanRian/pyreps"
Documentation = "https://JhonatanRian.github.io/pyreps/"
Repository = "https://github.com/JhonatanRian/pyreps"
Issues = "https://github.com/JhonatanRian/pyreps/issues"
Changelog = "https://github.com/JhonatanRian/pyreps/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.3",
    "openpyxl>=3.1.5",
    "psutil>=7.2.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = "none"
reportMissingModuleSource = "none"
pythonVersion = "3.12"
typeCheckingMode = "standard"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "memory: tests for memory stability and peak RSS usage",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
